changed npm module name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svg-to-react",
+  "name": "svg-to-react-cli",
   "version": "1.0.0",
   "description": "A command line utility that takes a svg image file and outputs a fully formatted stateless functional React component file that can be used to render your image.",
   "main": "index.js",
