--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svg-to-react-cli",
   "version": "1.3.1",
-  "description": "A command line utility that takes a svg image file and outputs a fully formatted stateless functional React component with `hieght` and `width` for props. Will process hundreds of files in seconds.",
+  "description": "A command line utility that takes a svg image file and outputs a fully formatted stateless functional React component with `hieght` and `width` for props. With flags to toggle formatting and remove style attributes.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
