--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "homepage": "https://github.com/goopscoop/svg-to-react#readme",
   "bin": {
     "svgtoreact": "./index.js"
+  },
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "minimist": "^1.2.0"
   }
 }
