--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "chalk": "^1.1.3",
-    "htmltojsx": "git://github.com/reactjs/react-magic.git",
+    "htmltojsx": "^0.3.0",
     "jsdom-no-contextify": "^3.1.0",
     "yargs": "^6.5.0"
   }
